# GenAI

./: .gitignore  pyproject.toml
Exercise10/: attention.ipynb  vision_transformer.ipynb
Exercise2/: Exercice_2.ipynb  task2.py
Exercise2/solution/: task1.py  task3.py
Exercise3/: Exercice_3.ipynb  solution_ex3.ipynb  task1.py  task2.py  task3.py
Exercise3/submission/: Exercice_3.ipynb  task2.py
Exercise4/: SS24_GenAI_ex4.ipynb
Exercise4/submission/: SS24_GenAI_ex4.ipynb
Exercise5/Santucci-12203019/: filters_visualization.py
Exercise7/: Santucci_12203019.ipynb  my_vae.py  network.py
Exercise8/: Santucci-12203019.ipynb  gan.py
Exercise8/Santucci_12203019/: Santucci-12203019.ipynb  cnn.py  gan.py
Exercise9/: Santucci-12203019.ipynb
Exercise9/Santucci_12203019/: Santucci-12203019.ipynb
Exercise9/Santucci_12203019/part1/: lstm.py  train.py
Exercise9/part1/: dataset.py  lstm.py  train.py  vanilla_rnn.py
SS24_GenAI_ex5-selber/: filters_visualization_custom.py  filters_visualization_task2.py
