[tool.poetry]
name = "genai"
version = "0.1.0"
description = ""
authors = ["Shannah Santucci <shannah.santucci@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.13.0"
ipython = "^8.23.0"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
pillow = "^10.3.0"
numpy = "^1.26.4"
torch = "^2.2.2"
tqdm = "^4.66.2"
torchvision = "^0.18.0"
ipywidgets = "^8.1.2"
opencv-python = "^4.10.0.82"
tensorboard = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
